fixed bug on header collapse button, added scroll arrow on introduction

--- a/src/components/Header/styles.scss
+++ b/src/components/Header/styles.scss
@@ -2,14 +2,6 @@
   width: 100%;
   margin: 0;
   padding: 0;
-  background: rgb(63, 63, 63);
-  color: white;
-  &-title {
-    font-family: 'CoreCircus', sans-serif;
-    color: rgb(177, 177, 177);
-    letter-spacing: -.3rem;
-  }
-  min-height: 10vh;
 }
 
 .navbar {
@@ -27,6 +19,10 @@
     margin: 0;
     padding: 0;
     color: #b8b8b8;
+  }
+
+  &-toggler {
+    border: 1px solid rgb(49, 49, 49);
   }
 
 }
